[project]
name = "prefect-filter"
version = "0.2.0"
description = "Prefect flow to filter pipeline companies against investment criteria using LLM evaluation"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0,<4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-json-logger>=3.0.0",
    "equimatch-agent==0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13.2",
    "vcrpy>=6.0.1",
]

[project.scripts]
filter-pipeline = "prefect_filter.cli:main"
serve = "prefect_filter.cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_filter"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a live Prefect API (deselect with -m 'not integration')",
]

[tool.uv.sources]
equimatch-agent = { git = "https://github.com/brokerben/harness.git" }
